Fix spacing of featured block and adjust announcement message position

--- a/source/stylesheets/home.css.sass
+++ b/source/stylesheets/home.css.sass
@@ -102,7 +102,7 @@ h1.featured-title
   +flex-direction(row)
   border: $border
   height: 304px
-  margin: 0 0 $marginSize * 2
+  margin: 0 0 50px
   padding: 0
 
   @media screen and (max-width: $break-medium)
